# steadystate-cli

./: Cargo.toml  README.md  architecture.md  flake.nix  treemerge.txt
.github/workflows/: docs.yml  fake-login-test.yml  run-tests.yaml
backend/: Cargo.toml
backend/flakes/noenv/: flake.nix
backend/src/: jwt.rs  main.rs  models.rs  state.rs
backend/src/auth/: fake.rs  github.rs  gitlab.rs  mod.rs  orchid.rs  provider.rs
backend/src/compute/: error.rs  local_provider.rs  mod.rs  tests.rs  traits.rs  types.rs
backend/src/compute/common/: git_ops.rs  github.rs  mod.rs  nix.rs  python.rs  scripts.rs  ssh_keys.rs  sshd.rs
backend/src/compute/providers/: mod.rs
backend/src/compute/providers/hetzner/: executor.rs
backend/src/compute/providers/local/: executor.rs  mod.rs  provider.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  sessions.rs
backend/tests/: integration_compute.rs  test_routes.rs  test_state.yaml
cli/: Cargo.toml
cli/src/: auth.rs  config.rs  main.rs  merge.rs  notify.rs  session.rs  sync.rs  tui.rs
cli/tests/: auth_integration.rs  cli_auth_flow.rs  cli_coverage.rs
cli/tests/common/: mod.rs
docs/: README.md  _nav.txt  _style.css  _template.html  architecture.md  build.sh  commands.md  configuration.md  getting-started.md  hosting-collaborative-session.md  hosting-pair-programming.md  index.md  merge-engine.md  troubleshooting.md  ycrdt-merge-design.md
src/: main.rs
