[package]
name = "steadystate-backend"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.15.0"
anyhow = "1"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
dashmap = "6"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
async-trait = "0.1"
shell-escape = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
